@startuml SIS_App_v3
' Layout
left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false

' --- enums / simple types ---
enum InternshipCategory {
  Research
  Minor
  Engineering
}

class Period {
  - year : int
  - semester : int
  + Period(year:int, semester:int)
  + Year : int {get}
  + Semester : int {get}
  + ToString() : string
}

' --- domain entities ---
class Organization {
  - organizationId : string
  - name : string
  - address : string
  - city : string
  - url : string?
  - phoneNumber : string?
  - email : string?
  + Organization(name:string, address:string, city:string)
  + Organization(id:string, name:string, address:string, city:string)
  + OrganizationId : string {get}
  + Name : string {get}
  + Contacts : List<ContactPerson> {get}
  + ToString() : string
}

class ContactPerson {
  - id : string
  - organizationId : string
  - firstName : string?
  - lastName : string?
  - email : string?
  - jobTitle : string?
  - phoneNumber : string?
  - department : string?
  + ContactPerson()
  + Id : string {get}
  + FirstName : string? {get}
  + LastName : string? {get}
  + Email : string? {get}
  + JobTitle : string? {get}
}

class Student {
  - studentId : string
  - firstName : string
  - lastName : string
  + Student(studentId:string, firstName:string, lastName:string)
  + StudentId : string {get}
  + FirstName : string {get}
  + LastName : string {get}
  + ToString() : string
}

class Internship {
  - id : string
  - organizationId : string
  - organizationName : string
  - title : string
  - shortDescription : string
  - longDescription : string
  - period : Period
  - category : InternshipCategory
  - isCompleted : bool
  - finalGrade : double?
  + Internship(orgId:string, orgName:string, title:string, shortDesc:string, longDesc:string, period:Period, category:InternshipCategory)
  + Id : string {get}
  + Title : string {get}
  + OrganizationId : string {get}
  + OrganizationName : string {get}
  + Contacts : List<ContactPerson> {get}
  + AssignedStudents : List<Student> {get}
  + MarkCompleted(grade:double) : void
  + ToString() : string
}

' --- repository / services ---
interface ICoordinatorRepository {
  + Organizations : IReadOnlyList<Organization> {get}
  + Internships : IReadOnlyList<Internship> {get}
  + Students : IReadOnlyList<Student> {get}

  + AddOrganization(org:Organization) : bool
  + GetOrganizationsOverview() : IEnumerable<Organization>

  + AddInternship(internship:Internship) : void
  + GetInternshipsOverview(period:Period, category:InternshipCategory?) : IEnumerable<Internship>

  + AssignStudentToInternship(student:Student, internshipId:string) : bool
  + RemoveStudentFromInternship(studentId:string, internshipId:string) : bool

  + WithdrawInternship(internshipId:string) : bool
  + MarkInternshipCompleted(internshipId:string, finalGrade:double) : bool

  + GetOrganizationById(organizationId:string) : Organization?
  + GetInternshipsByOrganizationId(organizationId:string) : IEnumerable<Internship>
  + GetContactPersonsForInternship(internshipId:string) : IEnumerable<ContactPerson>

  + AddStudent(student:Student) : bool

  ' Contact management
  + AddContactPerson(organizationId:string, contact:ContactPerson) : bool
  + GetContactPersonsByOrganization(organizationId:string) : IEnumerable<ContactPerson>
}

class SystemAdminCoordinator {
  - _organizations : List<Organization>
  - _internships : List<Internship>
  - _students : List<Student>
  + SystemAdminCoordinator()
  + AddContactPerson(organizationId:string, contact:ContactPerson) : bool
  + GetContactPersonsByOrganization(organizationId:string) : IEnumerable<ContactPerson>
  + (implements ICoordinatorRepository)
}

class MySqlCoordinatorRepository {
  - _connectionString : string
  - _conn : MySqlConnection
  + MySqlCoordinatorRepository(connectionString:string)
  + EnsureSchema() : void
  + Dispose() : void

  ' implements ICoordinatorRepository methods including contact methods
  + AddContactPerson(organizationId:string, contact:ContactPerson) : bool
  + GetContactPersonsByOrganization(organizationId:string) : IEnumerable<ContactPerson>
  + (implements ICoordinatorRepository)
}

' --- relations / cardinality ---
Organization "1" -- "0..*" ContactPerson : employs
Organization "1" -- "0..*" Internship : offers

Internship "1" -- "0..*" ContactPerson : contacts
ContactPerson "0..*" -- "0..*" Internship : linked_via_internship_contacts

Internship "1" -- "0..*" Student : assigned >
Student "0..*" -- "0..*" Internship : assignments (via internship_assignments)

' implementations
ICoordinatorRepository <|.. SystemAdminCoordinator
ICoordinatorRepository <|.. MySqlCoordinatorRepository

' --- notes about CLI behavior ---
note bottom
  CLI features reflected in repository:
  - Coordinator menu: list/add orgs, internships, students, contacts
  - Student menu: browse internships, view contact details, apply (assignment)
  - Contacts are stored in contact_persons and linked via internship_contacts
end note
@enduml